# ts-rs

./: .gitignore
ts-rs/: Cargo.toml
ts-rs/src/: lib.rs  serde_json.rs  time.rs  url.rs
ts-rs/tests/: serde_json.rs  time.rs  url.rs
