[package]
name = "ts-rs"
version = "6.1.2"
authors = ["Moritz Bischof <moritz.bischof1@gmail.com>"]
edition = "2021"
license = "MIT"
description = "generate typescript bindings from rust types"
homepage = "https://github.com/Aleph-Alpha/ts-rs"
repository = "https://github.com/Aleph-Alpha/ts-rs"
keywords = ["typescript", "ts", "bindings", "ts-rs", "wasm"]
categories = ["development-tools::ffi", "development-tools::build-utils", "wasm", "web-programming"]
readme = "../README.md"

[features]
time-impl = ["time"]
url-impl = ["url"]
chrono-impl = ["chrono"]
bigdecimal-impl = ["bigdecimal"]
uuid-impl = ["uuid"]
bytes-impl = ["bytes"]
serde-json-impl = ["serde_json"]
serde-compat = ["ts-rs-macros/serde-compat"]
format = ["dprint-plugin-typescript"]
default = ["serde-compat"]

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.2", features = ["serde"]}
url = { version = "2", features = ["serde"] }

[dependencies]
ts-rs-macros = { version = "6.1.2", path = "../macros" }
dprint-plugin-typescript = { version = "0.43", optional = true }
chrono = { version = "0.4.19", optional = true }
bigdecimal = { version = ">=0.0.13, < 0.4.0", features = ["serde"], optional = true }
time = { version = "0.2", optional = true, features = ["std"] }
url = { version = "2", optional = true }
serde_json  = { version = "1", optional = true }

uuid = { version = "0.8.2", optional = true }
bytes = { version = "1.0", optional = true }
thiserror = "1"
